Bug 274622 - [WebGPU] RenderPassEncoder::errorValidatingDrawIndexed accesses m_pipeline without checking if it exists
Summary: [WebGPU] RenderPassEncoder::errorValidatingDrawIndexed accesses m_pipeline wi...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mike Wyrzykowski
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-05-23 15:18 PDT by Mike Wyrzykowski
Modified: 2024-05-24 11:55 PDT (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2024-05-23 15:18:32 PDT
[WebGPU] RenderPassEncoder::errorValidatingDrawIndexed accesses m_pipeline without checking if it exists
Comment 1 Radar WebKit Bug Importer 2024-05-23 15:18:47 PDT
<rdar://problem/128640505>
Comment 2 Mike Wyrzykowski 2024-05-23 15:22:38 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29023
Comment 3 EWS 2024-05-24 11:55:06 PDT
Committed 279284@main (93f762e0815d): <https://commits.webkit.org/279284@main>

Reviewed commits have been landed. Closing PR #29023 and removing active labels.