[WebGPU] RenderPassEncoder::errorValidatingDrawIndexed accesses m_pipeline without checking if it exists https://bugs.webkit.org/show_bug.cgi?id=274622 <radar://128640505>

Reviewed by Tadeu Zagallo.

m_pipeline may be null, need to check it before accessing the WeakPtr.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-274622-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-274622.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderBundleEncoder.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::computeMininumVertexCount const):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::computeMininumVertexCount const):
(WebGPU::RenderPassEncoder::clampIndexBufferToValidValues):
(WebGPU::RenderPassEncoder::clampIndirectIndexBufferToValidValues):
(WebGPU::RenderPassEncoder::errorValidatingDrawIndexed const):

Canonical link: https://commits.webkit.org/279284@main